@@ -1,5 +1,7 @@
 CHANGES IN FLTK 1.1.0
 
+	- Fl_BMP_Image now supports older BMP files with the 12
+	  byte header.
 	- Optimized the redrawing of tabs and radio/check
 	  buttons when the keyboard focus changes.
 	- More tooltip fixes.
